--- a/app/src/main/res/layout/activity_sender1.xml
+++ b/app/src/main/res/layout/activity_sender1.xml
@@ -14,7 +14,7 @@
         android:text="AES Key" />
 
     <Button
-        android:id="@+id/stegan_button_r"
+        android:id="@+id/stegan_button_s"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
