--- a/app/src/main/res/layout/activity_sender1.xml
+++ b/app/src/main/res/layout/activity_sender1.xml
@@ -4,22 +4,47 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/aes_button_s"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/enter_aes_s"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="20dp"
-        android:text="AES Key" />
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal"
+        android:text="Enter AES Key" />
 
-    <Button
-        android:id="@+id/stegan_button_s"
+    <EditText
+        android:id="@+id/aes_key_s"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="textPassword" />
+
+    <TextView
+        android:id="@+id/enter_stegan_s"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal"
+        android:text="Enter Stegan key" />
+
+    <EditText
+        android:id="@+id/stegan_key_s"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"
-        android:text="Stegan Key" />
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/encrypt_button"
