--- a/app/src/main/res/layout/activity_sender1.xml
+++ b/app/src/main/res/layout/activity_sender1.xml
@@ -47,10 +47,19 @@
         android:inputType="textPassword" />
 
     <Button
+        android:id="@+id/select_button_s"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:text="Select File" />
+
+    <Button
         android:id="@+id/encrypt_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:text="Begin Encryption" />
 
