added scroll bar for file extension

--- a/app/src/main/res/layout/activity_receiver1.xml
+++ b/app/src/main/res/layout/activity_receiver1.xml
@@ -12,7 +12,9 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
-        android:text="Enter Stegan Key" />
+        android:text="Enter Stegan Key"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/stegan_key_r"
@@ -31,7 +33,9 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
-        android:text="Enter AES Key" />
+        android:text="Enter AES Key"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/aes_key_r"
@@ -53,6 +57,31 @@
         android:text="Select File"
         tools:layout_editor_absoluteX="159dp"
         tools:layout_editor_absoluteY="93dp" />
+
+    <TextView
+        android:id="@+id/extension_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:gravity="center_horizontal"
+        android:text="Select Format To Decrypt File In"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textStyle="bold" />
+
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="161dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/spinner_bg"
+        android:dropDownWidth="wrap_content"
+        android:entries="@array/format_arrays"
+        android:spinnerMode="dropdown" />
+        android:gravity="center_horizontal"
+        android:prompt="@string/format_prompt" />
+
 
     <Button
         android:id="@+id/decrypt_button"
