--- a/app/src/main/res/layout/activity_sender1.xml
+++ b/app/src/main/res/layout/activity_sender1.xml
@@ -12,7 +12,9 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="5dp"
         android:gravity="center_horizontal"
-        android:text="Enter AES Key" />
+        android:text="Enter AES Key"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/aes_key_s"
@@ -33,7 +35,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:gravity="center_horizontal"
-        android:text="Enter Stegan key" />
+        android:text="Enter Stegan key"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/stegan_key_s"
